--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,6 +29,7 @@
         <p>
           <% if !@response_series.blank? %>
             <strong><%= @response_series[0]["name"] %></strong>
+            <%#= @response_series[0]["games"] %>
           <% end %>
         </p>
       </div>
@@ -42,12 +43,15 @@
           <% if !@response_game.blank? %>
             <% @response_game.each do |num|%>
               <p><strong><em><%= num["name"].upcase %></em></strong></p>
-              <%#= num["cover"] %>
-              <p><strong>Release Date:</strong> <%= num["release_dates"][0]["human"] %></p>
+              <% if !num["release_dates"].nil? %>
+                <p><strong>Release Date:</strong> <%= num["release_dates"][0]["human"] %></p>
+              <% else %>
+                <p><strong>Release Date:</strong></p>
+              <% end %>
               <% if !num["cover"].nil? %>
                 <p><strong>Cover Art:</strong> <img class="cover_art" src='<%= num["cover"]["url"]%>' style="width:73px;height:85px;" onerror="this.style.display='none'"/></p>
               <% else %>
-                <%= "No Cover Art Available" %><br>
+                <p><strong>Cover Art:</strong></p><img onerror="this.style.display='none'"/>
               <% end %>
               <p><strong>Summary: </strong><br><%= num["summary"] %></p>
               <p><strong>IGDB Rating: </strong>
@@ -74,7 +78,7 @@
       <h2 class="h2_style">Characters</h2>
       <div class="well">
         <p>
-          <% if !@response_game.blank? %>
+          <% if !@response_character.blank? %>
             <strong><%= @response_character[0]["name"] %></strong>
           <% end %>
         </p>
