--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,5 +1,5 @@
 .logo_img{
-    margin: 40px;
+    margin: 40px 40px 10px 40px;
 }
 
 img {
@@ -34,6 +34,16 @@ img, .cover_art {
   // -webkit-text-stroke-color: #4c180a;
   text-shadow: -3px 3px 0 #000,;
   text-align:center;
+}
+
+.h3_style {
+  font-family: 'Gill Sans';
+  color: #eaaa60;
+  // -webkit-text-stroke-width: 1px;
+  // -webkit-text-stroke-color: #4c180a;
+  text-shadow: -3px 3px 0 #000,;
+  margin: 0 0 50px 70px;
+
 }
 
 .search_container {
