added css to asset pipeline

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -53,7 +53,7 @@ img, .cover_art {
 }
 
 body {
-  background-image: url(retro-desktop_2.jpg);
+  background-image: url(retro-desktop_2_2.jpg);
   background-position: fixed;
 }
 
